--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/storage": "^0.13.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
@@ -16,6 +17,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
